# zeus

./: .clang-format
code/: .gitignore  CMakeLists.txt
code/foundation/: CMakeLists.txt
code/foundation/gtest/: CMakeLists.txt  base64_longstring.h  byte.cpp  charsetutils_string.h  compiler.cpp  config.cpp  container.cpp  core.cpp  crypt.cpp  dep_inject.cpp  file.cpp  hardware.cpp  hardware_win.cpp  ipc.cpp  main.cpp  message.cpp  move_test.hpp  random.cpp  resource.cpp  resource_linux.cpp  resource_win.cpp  security_win.cpp  string.cpp  sync.cpp  sync_notify.cpp  thread.cpp  time.cpp
code/foundation/gtest/resource/: com.abc.app.desktop  cpuinfo_kv.txt  ini_test.txt
code/foundation/gtest/system/: child_process.cpp  child_process_linux.cpp  child_process_win.cpp  current_exe.cpp  environment.cpp  environment_linux.cpp  environment_win.cpp  net.cpp  net_linux.cpp  net_win.cpp  os.cpp  os_linux.cpp  os_win.cpp  power_request_test.cpp  process.cpp  process_linux.cpp  process_win.cpp  register_win.cpp  system.cpp  system_win.cpp  wmi_registry.hpp
code/foundation/src/byte/: byte_buffer_view.cpp  byte_order.cpp  byte_utils.cpp
code/foundation/src/compiler/: compiler.cpp  compiler_gcc.cpp  compiler_vc.cpp
code/foundation/src/config/: backup_config.cpp  config.cpp  config_view.cpp  general_config.cpp  layered_config.cpp  switch_config.cpp
code/foundation/src/core/: random.cpp  system_error.cpp  system_error_linux.cpp  system_error_win.cpp
code/foundation/src/crypt/: aes_decrypt.cpp  aes_encrypt.cpp  base64_decrypt.cpp  base64_encrypt.cpp  base_decrypt.cpp  base_digest.cpp  base_encrypt.cpp  crc32_digest.cpp  crc64_ecma182_digest.cpp  hmac_digest.cpp  md5_digest.cpp  padding.cpp  raw_md5_digest.cpp  sha1_digest.cpp  sha224_digest.cpp  sha256_digest.cpp  sha384_digest.cpp  sha512_digest.cpp  uuid.cpp
code/foundation/src/debugger/: debugger.cpp
code/foundation/src/dep_inject/: auto_type_register.cpp  injected_object.cpp  managed_object.cpp  object_container.cpp
code/foundation/src/file/: backup_file.cpp  file_utils.cpp  file_utils_linux.cpp  file_utils_win.cpp  file_wrapper.cpp  file_wrapper_linux.cpp  file_wrapper_win.cpp  ini_file_utils.cpp  kv_file_utils.cpp
code/foundation/src/hardware/: base_board.cpp  cpu.cpp  cpu_linux.cpp  cpu_win.cpp  display_adapter.cpp  display_adapter_linux.cpp  display_adapter_win.cpp  display_pci_table.cpp  hard_disk.cpp  hard_disk_linux.cpp  hard_disk_win.cpp  memory.cpp  memory_bank.cpp  memory_linux.cpp  memory_win.cpp  monitor.cpp  monitor_linux.cpp  monitor_win.cpp  pci_id.py  screen_win.cpp  smbios.cpp  smbios_linux.cpp  smbios_win.cpp  storage.cpp  storage_linux.cpp  storage_win.cpp  system.cpp
code/foundation/src/ipc/: global_event_linux.cpp  global_event_win.cpp  global_mutex.cpp  global_mutex_linux.cpp  global_mutex_win.cpp  memory_mapping_linux.cpp  memory_mapping_win.cpp  shared_memory_linux.cpp  shared_memory_win.cpp
code/foundation/src/message/: message_bus.cpp
code/foundation/src/resource/: auto_constructor.cpp  auto_free.cpp  auto_raii.cpp  auto_release.cpp  basic_stream_buffer.cpp  file_mapping_linux.cpp  file_mapping_win.cpp  pipe_stream_buffer_linux.cpp  pipe_stream_buffer_win.cpp
code/foundation/src/serialization/: file_serializer.cpp  serializer.cpp
(+307 files in other folders)
